# galvanizer

./: .gitignore  Cargo.toml  Gruntfile.js  README.md  application.conf  bower.json  gulpfile.js  package.json
app/assets/stylesheets/: backend.less  base.less  frontend.less
app/assets/templates/: layout.html
src/: main.rs
src/galvanizer/: configuration.rs  lib.rs
