[package]
name = "galvanizer"
version = "0.1.0"
authors = ["Jakko Sikkar <jakko.sikkar@gmail.com>",
           "Janno Põldma <janno.poldma@gmail.com>"]

[lib]
name = "galvanizer"
path = "src/galvanizer/lib.rs"

[[bin]]
name = "galvanizer"
path = "src/bin/main.rs"

[dependencies]
env_logger = "~0.3.2"
log = "~0.3.5"
nickel = "~0.7.3"
config = "~0.1.3"
mustache = "~0.6.3"